@@ -22,14 +22,14 @@ post_install() {
 	# Fixing membership
 
 	chown imagesat: "/var/log/imagesat"
-	chown imagesat: "/etc/imagesat_example.conf"
+	chown imagesat: "/etc/imagesat/imagesat_example.conf"
 
 	true
 }
 
 post_upgrade() {
 	chown imagesat: "/var/log/imagesat"
-	chown imagesat: "/etc/imagesat_example.conf"
+	chown imagesat: "/etc/imagesat/imagesat_example.conf"
 
 	true
 }
