@@ -5,7 +5,7 @@
 
 pkgname=jabref-beta
 _pkgname=jabref
-pkgver=2.10b
+pkgver=2.10b2
 pkgrel=1
 pkgdesc="GUI frontend for BibTeX, written in Java. Beta series"
 arch=('any')
@@ -16,7 +16,7 @@ conflicts=('jabref')
 source=(http://downloads.sourceforge.net/${_pkgname}/JabRef-${pkgver}.jar
         jabref.sh
         jabref.desktop)
-md5sums=('fb028fea754d037ed60d363059382df9'
+md5sums=('bc5f9cd941ad9b6faa7fb159f5d8fe37'
          'f8d196651863fe9d961d3f7ecda06936'
          '496d2094ee194a5568baee7af5b70fa2')
 
