@@ -1,8 +1,8 @@
 # Maintainer: Martin Schmölzer <mschmoelzer@gmail.com>
 
 pkgname=libopencm3-git
-pkgver=2013.05.10
-pkgrel=2
+pkgver=2013.06.30
+pkgrel=1
 pkgdesc="Open Source firmware library for various ARM Cortex microcontrollers"
 arch=(any)
 url="http://www.libopencm3.org/"
@@ -11,39 +11,17 @@ groups=('arm-none-eabi-toolchain')
 depends=('arm-none-eabi-gcc')
 makedepends=(git python-yaml)
 options=(!strip)
-
-_git_root="git://github.com/libopencm3/libopencm3.git"
-_git_name="libopencm3"
-_git_commit="4ad30d56b4b37e9c39d6623c61ea656c67441623"
+source=(git://github.com/libopencm3/libopencm3.git#commit=56e2928ebe1b8784517bd1fa489d6aa32e6af418)
+sha256sums=('SKIP')
 
 build() {
-  cd "${srcdir}"
-  
-  # Get rid of old build directories
-  rm -rf "${_git_name}-build"
-
-  # Clone or update sources from openocd git repository
-  if [ -d ${srcdir}/${_git_name} ]; then
-    msg "Updating Git repository"
-    cd ${_git_name} && git pull
-  else
-    msg "Cloning Git repository"
-    git clone ${_git_root}
-  fi
-
-  msg "Preparing build directory"
-  git clone "${srcdir}/${_git_name}" "${srcdir}/${_git_name}-build"
-
-  cd "${srcdir}/${_git_name}-build"
-
-  # Check out specific commit for repeatability
-  git checkout --detach ${_git_commit}
+  cd "${srcdir}/libopencm3"
 
   make lib
 }
 
 package() {
-  cd "${srcdir}/${_git_name}-build"
+  cd "${srcdir}/libopencm3"
 
   make DESTDIR="${pkgdir}/usr" install
 }
