@@ -3,7 +3,7 @@
 
 pkgname=libsystemdx
 pkgver=0.12
-pkgrel=1
+pkgrel=2
 pkgdesc="A library for systemdx, systemdx-gtk, systemdx-qt"
 options=('!strip')
 arch=('i686' 'x86_64')
@@ -23,6 +23,5 @@ if [ "${CARCH}" = 'x86_64' ]; then
 elif [ "${CARCH}" = 'i686' ]; then
   install -Dm755 libsystemdx.so $pkgdir/usr/lib/libsystemdx.so
 fi
-  install -Dm755 libsystemdx.so $pkgdir/usr/lib/libsystemdx.so
 }
 md5sums=('94cd765bf7599adfa0116d463c88cd7b')
