@@ -1,12 +1,12 @@
 # Maintainer: modywzm <modywzm at gmail dot com>#
 pkgname=neap-svn
-pkgver=65
+pkgver=78
 pkgrel=1
 pkgdesc="A simple pager that runs in the notification area / systray of your panel."
 arch=('i686' 'x86_64')
 url="http://code.google.com/p/neap/"
 license=('custom:BSD-new')
-depends=('pygtk' 'python-xlib')
+depends=('python2' 'pygtk' 'python2-xlib')
 makedepends=('subversion')
 provides=('neap')
 conflicts=('neap')
@@ -15,7 +15,7 @@ install="$pkgname.install"
 _svnmod="neap"
 _svntrunk="http://neap.googlecode.com/svn/trunk/"
 
-build() {
+package() {
   cd ${srcdir}
 
   #####
