@@ -10,9 +10,9 @@
 # Maintainer: glennblock <glenn.block@gmail.com>
 # Maintainer: ctavares <ctavares@microsoft.com>
 _npmname=azure-cli
-_npmver=0.6.16
+_npmver=0.6.17
 pkgname=nodejs-${_npmname} # All lowercase
-pkgver=0.6.16
+pkgver=0.6.17
 pkgrel=1
 pkgdesc="Windows Azure Cross Platform Command Line tool"
 arch=(any)
@@ -22,7 +22,7 @@ depends=('nodejs' )
 optdepends=()
 source=(http://registry.npmjs.org/$_npmname/-/$_npmname-$_npmver.tgz)
 noextract=($_npmname-$_npmver.tgz)
-sha1sums=(ab0de2942ec1888a9411101e9dfff18611205bf5)
+sha1sums=('26ede0d8f59b72740905d7ec744ee2e506cd9d87')
 
 build() {
   cd $srcdir
