@@ -1,17 +1,16 @@
+# vim:set ts=2 sw=2 et ft=sh tw=100: expandtab
 # Maintainer: Piotr Rogoża <rogoza dot piotr at gmail dot com>
 # Contributor: Piotr Rogoża <rogoza dot piotr at gmail dot com>
-# vim:set ts=2 sw=2 et ft=sh tw=100: expandtab
 
+pkgname=perl-padre-plugin-spellcheck
+pkgver=1.32
+pkgrel=1
 _author=B/BO/BOWTIE
 _perlmod=Padre-Plugin-SpellCheck
-pkgname=perl-padre-plugin-spellcheck
-pkgver=1.29
-pkgrel=2
 pkgdesc='Padre::Plugin::SpellCheck - Check spelling in Padre, The Perl IDE'
 arch=('any')
-url="http://search.cpan.org/~bowtie/Padre-Plugin-SpellCheck"
+url="http://search.cpan.org/dist/Padre-Plugin-SpellCheck"
 license=('GPL' 'PerlArtistic')
-groups=()
 depends=(
 perl-padre
 perl-module-util
@@ -22,7 +21,9 @@ perl-file-which
 perl-try-tiny
 )
 makedepends=(perl)
-optdepends=()
+optdepends=(
+'aspell-lang-code: additional dictonaries'
+'hunspell-lang-code: additional dictonaries')
 provides=(
 perl-padre-plugin-spellcheck-checker
 perl-padre-plugin-spellcheck-engine
@@ -30,29 +31,52 @@ perl-padre-plugin-spellcheck-fbp-checker
 perl-padre-plugin-spellcheck-fbp-preferences
 perl-padre-plugin-spellcheck-preferences
 )
-conflicts=()
-replaces=()
-backup=()
 options=(!emptydirs)
-install=
 source=("http://search.cpan.org/CPAN/authors/id/$_author/$_perlmod-$pkgver.tar.gz")
 noextract=()
 
 build(){
-  cd "$srcdir/$_perlmod-$pkgver"
+  cd "$srcdir"/$_perlmod-$pkgver
+  
+  # Setting these env variables overwrites any command-line-options we don't want...
+  export PERL_MM_USE_DEFAULT=1 PERL_AUTOINSTALL=--skipdeps \
+    PERL_MM_OPT="INSTALLDIRS=vendor DESTDIR='$pkgdir'" \
+    PERL_MB_OPT="--installdirs vendor --destdir '$pkgdir'" \
+    MODULEBUILDRC=/dev/null
 
-  # Install module in vendor directories.
-  PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
-  make
+  # If using Makefile.PL
+  if [ -r Makefile.PL ]; then
+    /usr/bin/perl Makefile.PL
+    make
+  # If using Build.PL
+  elif [ -r Build.PL ]; then
+    /usr/bin/perl Build.PL
+    perl Build
+  fi
 }
 check(){
-  cd "$srcdir/$_perlmod-$pkgver"
-  make test
+  cd "$srcdir"/$_perlmod-$pkgver
+
+  # If using Makefile.PL
+  if [ -r Makefile.PL ]; then
+    make test
+  # If using Build.PL
+  elif [ -r Build.PL ]; then
+    perl Build test
+  fi
 }
 package(){
-  cd "$srcdir/$_perlmod-$pkgver"
-  make install DESTDIR="$pkgdir/"
+  cd "$srcdir"/$_perlmod-$pkgver
+  
+  # If using Makefile.PL
+  if [ -r Makefile.PL ]; then
+    make install
+  # If using Build.PL
+  elif [ -r Build.PL ]; then
+    perl Build install
+  fi
+
   # remove perllocal.pod and .packlist
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
-md5sums=('c674bd936b50f0b49840aacbbb160364')
+md5sums=('e43f737f1ab8076a5bf2fc26f7aa3a47')
