@@ -1,17 +1,16 @@
+# vim:set ts=2 sw=2 et ft=sh tw=100: expandtab
 # Maintainer: Piotr Rogoża <rogoza dot piotr at gmail dot com>
 # Contributor: Piotr Rogoża <rogoza dot piotr at gmail dot com>
-# vim:set ts=2 sw=2 et ft=sh tw=100: expandtab
 
+pkgname=perl-text-hunspell
+pkgver=2.08
+pkgrel=1
 _author=C/CO/COSIMO
 _perlmod=Text-Hunspell
-pkgname=perl-text-hunspell
-pkgver=2.05
-pkgrel=1
 pkgdesc='Text::Hunspell - Perl interface to the GNU Hunspell library'
 arch=('i686' 'x86_64')
-url="http://search.cpan.org/~cosimo/Text-Hunspell/"
+url="http://search.cpan.org/dist/Text-Hunspell/"
 license=('GPL' 'PerlArtistic')
-groups=()
 depends=(
 perl
 hunspell
@@ -20,36 +19,51 @@ makedepends=(
 perl
 hunspell
 )
-optdepends=()
-provides=()
-conflicts=()
-replaces=()
-backup=()
 options=(!emptydirs)
-install=
 source=("http://search.cpan.org/CPAN/authors/id/$_author/$_perlmod-$pkgver.tar.gz")
-# hunspell.patch
-noextract=()
 
 build(){
-  cd "$srcdir/$_perlmod-$pkgver"
-  # version of hunspell
-#  _hunver=$(LC_ALL=C pacman -Qi hunspell | grep Version | awk '{print $3}' | sed  's/^\([0-9]\+\.[0-9]\+\).*$/\1/')
-#  sed -e "s/HUNSPELL_VERSION/$_hunver/" $srcdir/hunspell.patch > $srcdir/hunspell.patch.fix
-#  patch -p1 < ../hunspell.patch.fix
+  cd "$srcdir"/$_perlmod-$pkgver
+  
+  # Setting these env variables overwrites any command-line-options we don't want...
+  export PERL_MM_USE_DEFAULT=1 PERL_AUTOINSTALL=--skipdeps \
+    PERL_MM_OPT="INSTALLDIRS=vendor DESTDIR='$pkgdir'" \
+    PERL_MB_OPT="--installdirs vendor --destdir '$pkgdir'" \
+    MODULEBUILDRC=/dev/null
 
-  # Install module in vendor directories.
-  PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
-  make
+  # If using Makefile.PL
+  if [ -r Makefile.PL ]; then
+    /usr/bin/perl Makefile.PL
+    make
+  # If using Build.PL
+  elif [ -r Build.PL ]; then
+    /usr/bin/perl Build.PL
+    perl Build
+  fi
 }
 check(){
-  cd "$srcdir/$_perlmod-$pkgver"
-  make test
+  cd "$srcdir"/$_perlmod-$pkgver
+
+  # If using Makefile.PL
+  if [ -r Makefile.PL ]; then
+    make test
+  # If using Build.PL
+  elif [ -r Build.PL ]; then
+    perl Build test
+  fi
 }
 package(){
-  cd "$srcdir/$_perlmod-$pkgver"
-  make install DESTDIR="$pkgdir/"
+  cd "$srcdir"/$_perlmod-$pkgver
+  
+  # If using Makefile.PL
+  if [ -r Makefile.PL ]; then
+    make install
+  # If using Build.PL
+  elif [ -r Build.PL ]; then
+    perl Build install
+  fi
+
   # remove perllocal.pod and .packlist
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
-md5sums=('24a1bb194754b00af203da02dc9624b2')
+md5sums=('3e0bfa5a58ae1bf689202c36f283df35')
