@@ -1,48 +1,41 @@
-# Maintainer: taylorchu <tailinchu@gmail.com>
-# Contributer: Antony Male <antony.male@gmail.com>
-# Contributer: J. Kuske <kuskej@yahoo.com>
+# $Id$
+# Maintainer: Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+# Contributor: Alexander Fehr <pizzapunk gmail com>
+# Contributor: Xilon <xilonmu@gmail.com>
+# Contributor: William Giokas <1007380@gmail.com>
 
 pkgname=powertop-git
-pkgver=20120510
-pkgrel=1
-pkgdesc="Tool that finds the software that makes your laptop use more power than necessary"
+_pkgname=powertop
+pkgver=2.3.r16.gfa4cbd5
+pkgrel=2
+pkgdesc='A tool to diagnose issues with power consumption and power management, git version'
 arch=('i686' 'x86_64')
-url="https://github.com/fenrus75/powertop"
+url='https://01.org/powertop/'
 license=('GPL2')
 makedepends=('git')
-provides=('powertop')
-conflicts=('powertop')
+depends=('gcc-libs' 'libnl' 'ncurses' 'pciutils')
+provides=("$_pkgname")
+conflicts=("$_pkgname")
+source=(git+https://github.com/fenrus75/powertop.git)
+sha256sums=('SKIP')
 
-_gitroot="https://github.com/fenrus75/powertop.git"
-_gitname="powertop"
+# template start; name=git-pkgver-r; version=1.0;
+pkgver() {
+    cd "$srcdir/$_pkgname"
+    git describe --tags --long | sed -E 's/([^-]+-g)/r\1/;s/-/./g;s/^v//g'
+}
 
 build() {
-  cd "$srcdir"
-  msg "Connecting to GIT server...."
+    cd ${srcdir}/$_pkgname
 
-  if [ -d $_gitname ] ; then
-    cd $_gitname && git pull origin
-    msg "The local files are updated."
-  else
-    git clone $_gitroot $_gitname
-  fi
-
-  msg "GIT checkout done or server timeout"
-  msg "Starting make..."
-
-  rm -rf "$srcdir/$_gitname-build"
-  git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
-  cd "$srcdir/$_gitname-build"
-
-  #
-  # BUILD HERE
-  #
-  ./autogen.sh
-  ./configure
-  make
+    ./autogen.sh
+    ./configure --prefix=/usr
+    make
 }
 
 package() {
-  cd "$srcdir/$_gitname-build"
-  make DESTDIR="$pkgdir/" install
-} 
+    cd ${srcdir}/$_pkgname
+
+    make DESTDIR=${pkgdir} install
+    mv "$pkgdir/usr/sbin" "$pkgdir/usr/bin"
+}
