@@ -2,12 +2,13 @@
 
 pkgname=vsqlite++
 pkgver=0.3.12
-pkgrel=1
+pkgrel=2
 pkgdesc="SQLite wrapper library for C++"
 arch=('i686' 'x86_64')
 url="http://sourceforge.net/projects/sqlitepp/"
 license=('BSD')
 depends=('sqlite')
+makedepends=('boost')
 source=("http://downloads.sourceforge.net/sqlitepp/${pkgname}-${pkgver}.tar.gz")
 
 build() {
