@@ -1,6 +1,12 @@
-2013-06-26 Build User <jenkins@coast-project.org>
+2013-07-03 Build User <jenkins@coast-project.org>
 
       
+      PKGBUILD prepared for new jenkins-ci version 1.521
+
+
+2013-06-26 Build User <jenkins@coast-project.org>
+
+      jenkins-ci-1.520-1:
       PKGBUILD prepared for new jenkins-ci version 1.520
 
 
